# lazyhf

./: .rustfmt.toml  Cargo.toml  LICENSE
src/: app.rs  args.rs  input.rs  main.rs  notify_mutex.rs  queue.rs  strings.rs
src/components/: mod.rs  revision_files.rs
src/components/utils/: mod.rs
src/keys/: key_config.rs  key_list.rs  mod.rs  symbols.rs
src/tabs/: files.rs  mod.rs  status.rs
src/ui/: mod.rs  style.rs
