[package]
name = "lazyllm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", features = ["serde"] }
ratatui = { version = "0.29", default-features = false, features = [
    'crossterm',
    'serde',
] }
clap = { version = "4.5", features = ["env", "cargo"] }
anyhow = "1.0"
dirs = "5.0"
