[package]
name = "lazyllm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", features = ["serde"] }
ratatui = { version = "0.29", default-features = false, features = [
    'crossterm',
    'serde',
] }
clap = { version = "4.5", features = ["env", "cargo"] }
anyhow = "1.0"
dirs = "5.0"
scopeguard = "1.2.0"
serde = "1.0.219"
struct-patch = "0.9.2"
ron = "0.10.1"
log = "0.4.27"
crossbeam-channel = "0.5.15"
filetreelist = "0.5.2"
unicode-truncate = "2.0.0"
unicode-width = "0.2.0"
easy-cast = "0.5.3"
unicode-segmentation = "1.12.0"
pretty_assertions = "1.4.1"
chrono = "0.4.40"
